# esp32-dht

./: CMakeLists.txt
dht-esp-dashboard/: docker-compose.yaml  dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
dht-esp-dashboard/api/: .env  .gitignore  dockerfile  package-lock.json  package.json  tsconfig.json
dht-esp-dashboard/api/certs/: certificate.pem.crt  private.pem.key
dht-esp-dashboard/api/src/: index.ts
dht-esp-dashboard/api/src/model/: device.ts  telemetry.ts
dht-esp-dashboard/api/src/routes/: routes.ts
dht-esp-dashboard/api/src/service/: device.ts  devices.ts  telemetry.ts
dht-esp-dashboard/api/src/store/: device.ts  telemetry.ts
dht-esp-dashboard/src/: index.css  main.tsx
dht-esp-dashboard/src/clients/: device.tsx  telemetry.tsx
dht-esp-dashboard/src/components/: DhtChart.tsx  DropdownComponent.tsx  Layout.tsx  SelectedTimeRangeConfig.tsx  TopNavbar.tsx
dht-esp-dashboard/src/models/: Device.ts  Telemetry.ts
dht-esp-dashboard/src/pages/: Dashboard.tsx  Setting.tsx
firmware/: .gitignore
firmware/main/: CMakeLists.txt  Kconfig.projbuild  config.h  main.c
firmware/main/services/: dht_manager.c  dht_manager.h  http_manager.c  http_manager.h  mqtt_manager.c  mqtt_manager.h  nvs_manager.c  nvs_manager.h  wifi_manager.c  wifi_manager.h
